--- a/my-portifolio/src/app/globals.css
+++ b/my-portifolio/src/app/globals.css
@@ -4,7 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-top: #00020;
+  --background-start-rgb: 214, 219, 22;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -16,18 +17,19 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+  background:black;
+  color: white;
+  overflow-x:hidden;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.links:hover{
+  transition: 0.3s linear;
 }
